--- a/webapp/ui/css/style.css
+++ b/webapp/ui/css/style.css
@@ -3,12 +3,21 @@ header, footer {
 }
 
 footer {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	right: 0;
+	padding-top: 3em;
 }
 
 .bg-padded {
 	padding: 15px;
+}
+
+.dispute__option {
+    text-align: center;
+    margin-top: 3em;
+}
+
+.dispute__option img {
+    width: 90%;
+    display: block;
+    max-width: 200px;
+    margin: 0 auto;
 }
