--- a/webapp/view/layout.html
+++ b/webapp/view/layout.html
@@ -5,13 +5,13 @@
 		<title>ODR Test</title>
 		<base href="<?php echo $SCHEME.'://'.$HOST.':'.$PORT.$BASE.'/'; ?>" />
 
-		<link rel="stylesheet" href="/ui/css/bootstrap.css">
-		<link rel="stylesheet" href="/ui/css/style.css">
+		<link rel="stylesheet" href="/view/css/bootstrap.css">
+		<link rel="stylesheet" href="/view/css/style.css">
 	</head>
 	<body>
 		<header class="container">
 			<div class="col-sm-4">
-			    <a href="/"><img class="logo" src="ui/images/logo.png"></a>
+			    <a href="/"><img class="logo" src="view/images/logo.png"></a>
 			    Alpha version <?php //echo $VERSION; ?>
 			</div>
 
