--- a/webapp/view/dispute_view--single.html
+++ b/webapp/view/dispute_view--single.html
@@ -4,10 +4,10 @@
 
 <?php if (!$dispute->waitingForLawFirmB()) : ?>
     <p>
-        Initiatiated by company: <?php echo $dispute->partyA()->getLawFirm()->getName(); ?>, represented by <?php echo $dispute->partyA()->getAgent()->getName(); ?>
+        Initiatiated by company: <?php echo $dispute->getLawFirmA()->getName(); ?>, represented by <?php echo $dispute->getAgentA()->getName(); ?>
     </p>
     <p>
-        Initiated against company: <?php echo $dispute->partyB()->getLawFirm()->getName(); ?>, represented by <?php echo $dispute->partyB()->getAgent()->getName(); ?>
+        Initiated against company: <?php echo $dispute->getLawFirmB()->getName(); ?>, represented by <?php echo $dispute->getAgentB()->getName(); ?>
     </p>
 <?php endif; ?>
 
