--- a/webapp/view/dispute_new.html
+++ b/webapp/view/dispute_new.html
@@ -51,6 +51,11 @@
     </div>
 
     <div class="col-lg-12">
+        <label for="type" class="sr-only">Dispute summary:</label>
+        <textarea class="form-control" name="summary" placeholder="Dispute summary"></textarea>
+    </div>
+
+    <div class="col-lg-12">
         <button class="btn btn-lg btn-primary btn-block" type="submit">Create Dispute</button>
     </div>
 </form>
