--- a/webapp/view/lifespan_new.html
+++ b/webapp/view/lifespan_new.html
@@ -22,7 +22,7 @@
        <div class='col-sm-4'>
             <label for="start_time">Dispute lifespan start date:</label>
             <div class="form-group">
-                <div class='input-group date' class='datetime_picker'>
+                <div class='input-group date datetime_picker'>
                     <input id="start_time" name="start_time" type='text' class="form-control" />
                     <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
                     </span>
@@ -32,7 +32,7 @@
        <div class='col-sm-4'>
             <label for="end_time">Dispute lifespan end date:</label>
             <div class="form-group">
-                <div class='input-group date' class='datetime_picker'>
+                <div class='input-group date datetime_picker'>
                     <input id="end_time" name="end_time" type='text' class="form-control" />
                     <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
                     </span>
@@ -42,7 +42,7 @@
         <div class="col-lg-4">
             <label for="valid_until">Offer must be accepted by other party by:</label>
             <div class="form-group">
-                <div class='input-group date' class='datetime_picker'>
+                <div class='input-group date datetime_picker'>
                     <input id="valid_until" name="valid_until" type='text' class="form-control" />
                     <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
                     </span>
@@ -55,15 +55,15 @@
         <button class="btn btn-lg btn-primary btn-block" type="submit">Make lifespan offer</button>
     </div>
 
+    <link rel="stylesheet" href="view/css/jquery.datetimepicker.css" />
+    <script src="view/js/jquery.min.js"></script>
+    <script src="view/js/jquery.datetimepicker.js"></script>
     <script type="text/javascript">
-        $(function () {
-            $('.datetime_picker').datetimepicker({
-                defaultDate: "11/1/2013",
-                disabledDates: [
-                    moment("12/25/2013"),
-                    new Date(2013, 11 - 1, 21),
-                    "11/22/2013 00:53"
-                ]
+        // http://xdsoft.net/jqplugins/datetimepicker/
+        $(document).ready(function () {
+            $('.datetime_picker input').datetimepicker({
+              //format: 'unixtime' - we should instead do this on the server side @TODO
+              minDate:     0 // today
             });
         });
     </script>
