lifespan can be accepted or declined

--- a/webapp/view/dispute_close.html
+++ b/webapp/view/dispute_close.html
@@ -1,1 +1,12 @@
-<p>Are you sure you want to do that?</p>
+<form method="post">
+    <p>Are you sure you want to do that?</p>
+
+    <div class="">
+        <input type="radio" /> Dispute was resolved successfully <br />
+        <input type="radio" /> Unable to resolve dispute with Online Dispute Resolution.
+    </div>
+
+    <div class="">
+        <button type="submit">Close the dispute</button>
+    </div>
+</form>
