--- a/webapp/view/dispute_view--single.html
+++ b/webapp/view/dispute_view--single.html
@@ -2,6 +2,10 @@
 
 <h2><?php echo $dispute->getTitle(); ?></h2>
 
+<div class="lifespan_status">
+    <?php echo $dispute->getLifespan()->status(); ?>
+</div>
+
 <?php if (!$dispute->waitingForLawFirmB()) : ?>
     <p>
         Initiatiated by company: <?php echo $dispute->getLawFirmA()->getName(); ?>, represented by <?php echo $dispute->getAgentA()->getName(); ?>
