created mock lifespan object instead of querying if it exists

--- a/webapp/view/dispute_view--single.html
+++ b/webapp/view/dispute_view--single.html
@@ -3,7 +3,11 @@
 <h2><?php echo $dispute->getTitle(); ?></h2>
 
 <div class="lifespan_status">
-    <?php echo $dispute->getLifespan()->status(); ?>
+    <?php
+        if ($dispute->getLifespan()) {
+            echo $dispute->getLifespan()->status();
+        }
+    ?>
 </div>
 
 <?php if (!$dispute->waitingForLawFirmB()) : ?>
