ui tweak to show which side of conversation a message came from

--- a/webapp/view/css/style.css
+++ b/webapp/view/css/style.css
@@ -58,6 +58,11 @@ footer {
 .message {
     border: 1px solid grey;
     margin: 1em 0;
+    width: 80%;
+}
+
+.message--current_author {
+  float: right;
 }
 
 .message__body {
