--- a/webapp/view/lifespan_agreed.html
+++ b/webapp/view/lifespan_agreed.html
@@ -1,3 +1,9 @@
+<?php
+if ($dispute->getOfferedLifespan()) {
+    echo $dispute->getOfferedLifespan()->status();
+}
+?>
+
 <p>You have both agreed a dispute lifespan.</p>
 
 <p>
