--- a/webapp/view/css/style.css
+++ b/webapp/view/css/style.css
@@ -1,43 +1,61 @@
+/************************************************************ Default settings */
+
+html, body {
+    margin:  0;
+    padding: 0;
+    height:  100%;
+    -webkit-font-smoothing: antialiased !important;
+}
+
 p {
     padding: 12px;
 }
 
 footer {
-	text-align: center;
-	padding-top: 3em;
+    height: 45px;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
-.stats {
-    display: none;
-}
-
-/* @TODO - put environment in body class */
-.env--test .stats {
-    display: block;
-}
-
-.alignright {
-    text-align: right;
-}
+/************************************************************ Bootstrap overrides */
 
 .bg-padded {
 	padding: 15px;
 }
 
 .bg-primary a {
-  color: white;
+    color: white;
 }
 
-.dispute__option {
-    text-align: center;
-    margin-top: 3em;
+.form-control {
+    margin: 18px 0;
 }
 
-.dispute__option img {
-    width: 90%;
-    display: block;
-    max-width: 200px;
-    margin: 0 auto;
+/************************************************************ Custom classes */
+
+/*
+  Wrapper and content elements are to keep footer fixed to bottom of page. See:
+
+  http://matthewjamestaylor.com/blog/keeping-footers-at-the-bottom-of-the-page
+*/
+#wrapper {
+    min-height:100%;
+    position:relative;
+}
+
+#content {
+   padding-bottom: 60px;   /* >= height of the footer */
+}
+
+.container {
+    position: relative;
+}
+
+.alignright {
+    text-align: right;
 }
 
 .logo {
@@ -45,14 +63,16 @@ footer {
     padding: 12px 0;
 }
 
-.container {
-    position: relative;
+.return_to_dispute {
+    display: inline-block;
+    margin: 15px auto 20px;
 }
 
 .lifespan_status {
     position: absolute;
-    top: 0;
+    top: 15px;
     right: 0;
+    z-index: 9;
 }
 
 .message {
@@ -73,4 +93,37 @@ footer {
     text-align: right;
     background-color: #EDEDED;
     padding: 0.5em;
+}
+
+.dispute_list__item {
+  padding: 0.5em 0;
+}
+
+.dispute_list__item:nth-child(even) {
+  background-color: #EDEDED;
+}
+
+.dispute__option {
+    text-align: center;
+    margin-top: 3em;
+}
+
+.dispute__option__image {
+    width: auto;
+    display: block;
+    max-height: 150px;
+    margin: 5px auto 10px
+}
+
+.dispute__option__title {
+  font-size: 1.35em;
+}
+
+.stats {
+    display: none;
+}
+
+/* @TODO - put environment in body class */
+.env--test .stats {
+    display: block;
 }
