--- a/webapp/view/dispute_view--list.html
+++ b/webapp/view/dispute_view--list.html
@@ -9,36 +9,32 @@ else {
 
 <div class="dispute_list">
 
-    <div class="row">
-        <div class="dispute_list__item">
-            <div class="dispute_list__item__status col-sm-4">
-                <h3>Status</h3>
-            </div>
-            <div class="dispute_list__item__title col-sm-4">
-                <h3>Dispute Title</h3>
-            </div>
-            <div class="dispute_list__item__lifespan col-sm-4">
-                <h3>Lifespan Status</h3>
-            </div>
+    <div class="row dispute_list__item">
+        <div class="dispute_list__item__status col-sm-4">
+            <h3>Status</h3>
+        </div>
+        <div class="dispute_list__item__title col-sm-4">
+            <h3>Dispute Title</h3>
+        </div>
+        <div class="dispute_list__item__lifespan col-sm-4">
+            <h3>Lifespan Status</h3>
         </div>
     </div>
     <?php
     foreach($disputes as $dispute) {
     ?>
-        <div class="row">
-            <div class="dispute_list__item">
-                <div class="dispute_list__item__title col-sm-4">
-                    <?php
-                        $state = DisputeStateCalculator::getState($dispute, $account);
-                        echo $state->getStateDescription();
-                    ?>
-                </div>
-                <div class="dispute_list__item__title col-sm-4">
-                    <a href="<?php echo $dispute->getUrl(); ?>"><?php echo $dispute->getTitle(); ?></a>
-                </div>
-                <div class="dispute_list__item__lifespan col-sm-4">
-                    <?php echo '<a href="' . $dispute->getUrl() . '/lifespan">' . $dispute->getLatestLifespan()->status() . '</a>'; ?>
-                </div>
+        <div class="row dispute_list__item">
+            <div class="dispute_list__item__title col-sm-4">
+                <?php
+                    $state = DisputeStateCalculator::getState($dispute, $account);
+                    echo $state->getStateDescription();
+                ?>
+            </div>
+            <div class="dispute_list__item__title col-sm-4">
+                <a href="<?php echo $dispute->getUrl(); ?>"><?php echo $dispute->getTitle(); ?></a>
+            </div>
+            <div class="dispute_list__item__lifespan col-sm-4">
+                <?php echo '<a href="' . $dispute->getUrl() . '/lifespan">' . $dispute->getLatestLifespan()->status() . '</a>'; ?>
             </div>
         </div>
     <?php
