--- a/webapp/view/layout.html
+++ b/webapp/view/layout.html
@@ -2,98 +2,119 @@
 <html lang="en">
 	<head>
 		<meta charset="<?php echo $ENCODING; ?>" />
-		<title>ODR Test</title>
+		<title>SmartResolution</title>
 		<base href="<?php echo $SCHEME.'://'.$HOST.':'.$PORT.$BASE.'/'; ?>" />
 
 		<link rel="stylesheet" href="/view/css/bootstrap.css">
 		<link rel="stylesheet" href="/view/css/style.css">
+		<link rel="shortcut icon" href="/view/css/favicon.ico">
 	</head>
 	<body>
-		<header class="container">
-			<div class="row">
-				<div class="col-sm-4">
-				    <a href="/"><img class="logo" src="view/images/logo.png"></a>
-				</div>
+		<div id="wrapper">
+			<div id="content">
+				<header class="container">
+					<div class="row">
+						<div class="col-sm-4">
+						    <a href="/"><img class="logo" src="view/images/logo.png"></a>
+						</div>
 
-			    <div class="col-sm-4">
-					<p>
-						<?php
-							if (isset($notifications)) {
-								if (count($notifications) > 0) {
-									echo 'You have <a href="/notifications">' . count($notifications) . ' new notifications</a>.';
+					    <div class="col-sm-4">
+							<p>
+								<?php
+									if (isset($notifications)) {
+										if (count($notifications) > 0) {
+											echo 'You have <a href="/notifications">' . count($notifications) . ' new notifications</a>.';
+										}
+										else {
+											echo 'No new notifications.';
+										}
+									}
+								?>
+							</p>
+						</div>
+
+					    <div class="col-sm-4 alignright">
+							<p>
+								<?php
+									if (isset($account)) {
+										echo 'Welcome back, ' . $account->getName() . '. <a href="/logout">Logout</a>';
+									}
+									else {
+										echo '<a href="/login">Login</a> | <a href="/register">Register</a>';
+									}
+								?>
+							</p>
+						</div>
+					</div>
+				</header>
+
+				<div class="container">
+					<?php
+						// based on code found at http://stackoverflow.com/questions/2594211/php-simple-dynamic-breadcrumb
+						$breadcrumbs = array();
+
+						$urlParts = explode('/', $_SERVER['REQUEST_URI']);
+						$i = 1;
+						$url = '';
+						foreach($urlParts as $part){
+							if (strlen($part) > 0) {
+								$url = $url . '/' . $part;
+								// remove everything after the ?
+								$part = preg_replace('/\?.*/', '', $part);
+								// make first letter uppercase
+								$part = ucfirst($part);
+								// make safe to render to browser
+								$part = htmlspecialchars($part);
+								if ($i < count($urlParts)) {
+									$breadcrumbs[] = array(
+										'url'   => $url,
+										'title' => $part
+									);
 								}
-								else {
-									echo 'No new notifications.';
-								}
+								$i++;
 							}
-						?>
-					</p>
-				</div>
-
-			    <div class="col-sm-4 alignright">
-					<p>
-						<?php
-							if (isset($account)) {
-								echo 'Welcome back, ' . $account->getName() . '. <a href="/logout">Logout</a>';
-							}
-							else {
-								echo '<a href="/login">Login</a> | <a href="/register">Register</a>';
-							}
-						?>
-					</p>
-				</div>
-			</div>
-		</header>
-
-		<div class="container">
-			<div class="row">
-				<?php
-					// based on code found at http://stackoverflow.com/questions/2594211/php-simple-dynamic-breadcrumb
-					$breadcrumbs = array();
-
-					$urlParts = explode('/', $_SERVER['REQUEST_URI']);
-					$i = 1;
-					$url = '';
-					foreach($urlParts as $part){
-						if (strlen($part) > 0) {
-							$url = $url . '/' . $part;
-							// remove everything after the ?
-							$part = preg_replace('/\?.*/', '', $part);
-							// make first letter uppercase
-							$part = ucfirst($part);
-							// make safe to render to browser
-							$part = htmlspecialchars($part);
-							if ($i < count($urlParts)) {
-								$breadcrumbs[] = array(
-									'url'   => $url,
-									'title' => $part
-								);
-							}
-							$i++;
 						}
-					}
 
-					if (count($breadcrumbs) > 0) {
-						echo '<a href="/">Home</a>';
-					}
-					foreach($breadcrumbs as $crumb) {
-						echo ' / <a href="' . $crumb['url'] .'">' . $crumb['title'] . '</a>';
-					}
-				?>
+						if (count($breadcrumbs) > 0) {
+							echo '<a href="/">Home</a>';
+						}
+						foreach($breadcrumbs as $crumb) {
+							echo ' / <a href="' . $crumb['url'] .'">' . $crumb['title'] . '</a>';
+						}
+					?>
+				</div>
+
+				<?php if (isset($dispute)) : ?>
+					<div class="container">
+						<?php if (!isset($disputeDashboard)) : ?>
+							<div class="return_to_dispute bg-padded bg-primary">
+								<a href="<?php echo $dispute->getUrl(); ?>">&lt;&lt;&lt; Return to dispute dashboard</a>
+							</div>
+						<?php endif; ?>
+						<div class="lifespan_status bg-padded bg-info">
+						    <?php
+						    $status = $dispute->getLatestLifespan()->status();
+						    if ($dispute->getLatestLifespan()) {
+						        $status = $dispute->getLatestLifespan()->status();
+						    }
+						    echo '<a href="' . $dispute->getUrl() . '/lifespan">' . $status . '</a>';
+						    ?>
+						</div>
+					</div>
+				<?php endif; ?>
+
+				<div class="container">
+					<?php echo $this->render(Base::instance()->get('content')); ?>
+				</div>
 			</div>
+			<footer>
+			    <p>
+			    	SmartResolution is proudly powered by the <a href="http://fatfreeframework.com/"><?php echo $PACKAGE; ?></a> (v<?php echo $VERSION; ?>) and is licensed under the terms of the GPLv3. <a href="https://github.com/ChrisBAshton/major-project">View the project on GitHub</a>.
+				</p>
+			    <p class="stats">
+			    	<code><?php echo Base::instance()->format('Page rendered in {0} msecs / Memory usage {1} Kibytes',round(1e3*(microtime(TRUE)-$TIME),2),round(memory_get_usage(TRUE)/1e3,1)); ?></code>
+			    </p>
+			</footer>
 		</div>
-
-		<div class="container">
-			<?php echo $this->render(Base::instance()->get('content')); ?>
-		</div>
-
-		<footer>
-		    <p>
-		    	SmartResolution is proudly powered by the <a href="http://fatfreeframework.com/"><?php echo $PACKAGE; ?></a> (v<?php echo $VERSION; ?>) and is licensed under the terms of the GPLv3. <a href="https://github.com/ChrisBAshton/major-project">View the project on GitHub</a>.
-			</p>
-		    <p class="stats">
-		    	<code><?php echo Base::instance()->format('Page rendered in {0} msecs / Memory usage {1} Kibytes',round(1e3*(microtime(TRUE)-$TIME),2),round(memory_get_usage(TRUE)/1e3,1)); ?></code>
-		    </p>
-		</footer>
 	</body>
 </html>
