--- a/webapp/view/dispute_view--list.html
+++ b/webapp/view/dispute_view--list.html
@@ -1,39 +1,38 @@
 <h1>Disputes</h1>
 
 <?php
-if (count($disputes) === 0) {
+if (count($disputes) === 0) :
     echo '<p class="bg-padded bg-info">No disputes yet.</p>';
-}
-else {
+else :
 ?>
 
-<div class="dispute_list">
+<div class="list">
 
-    <div class="row dispute_list__item">
-        <div class="dispute_list__item__status col-sm-4">
+    <div class="row list__item">
+        <div class="list__item__status col-sm-4">
             <h3>Status</h3>
         </div>
-        <div class="dispute_list__item__title col-sm-4">
+        <div class="list__item__title col-sm-4">
             <h3>Dispute Title</h3>
         </div>
-        <div class="dispute_list__item__lifespan col-sm-4">
+        <div class="list__item__lifespan col-sm-4">
             <h3>Lifespan Status</h3>
         </div>
     </div>
     <?php
     foreach($disputes as $dispute) {
     ?>
-        <div class="row dispute_list__item">
-            <div class="dispute_list__item__title col-sm-4">
+        <div class="row list__item">
+            <div class="list__item__title col-sm-4">
                 <?php
                     $state = DisputeStateCalculator::getState($dispute, $account);
                     echo $state->getStateDescription();
                 ?>
             </div>
-            <div class="dispute_list__item__title col-sm-4">
+            <div class="list__item__title col-sm-4">
                 <a href="<?php echo $dispute->getUrl(); ?>"><?php echo $dispute->getTitle(); ?></a>
             </div>
-            <div class="dispute_list__item__lifespan col-sm-4">
+            <div class="list__item__lifespan col-sm-4">
                 <?php echo '<a href="' . $dispute->getUrl() . '/lifespan">' . $dispute->getLatestLifespan()->status() . '</a>'; ?>
             </div>
         </div>
@@ -44,5 +43,5 @@ else {
 </div>
 
 <?php
-}
+endif;
 ?>
