--- a/webapp/view/notifications.html
+++ b/webapp/view/notifications.html
@@ -1,11 +1,23 @@
 <h1>Notifications</h1>
 
-<?php
-if (count($notifications) === 0) {
-    echo '<p class="bg-padded bg-info">You have no new notifications.</p>';
-}
-else {
-    foreach($notifications as $notification) {
-        echo '<p><a class="notification__link" href="' . $notification->getUrl() . '?mark_notification_as_read=' . $notification->getNotificationId() . '">' . $notification->getMessage() . '</a></p>';
+<div class="list">
+    <?php
+    if (count($notifications) === 0) {
+        echo '
+            <div class="list__item col-sm-12">
+            <p class="bg-padded bg-info">You have no new notifications.</p>
+            </div>
+        ';
     }
-}
+    else {
+        foreach($notifications as $notification) {
+            echo '
+            <div class="list__item col-sm-12">
+                <a class="notification__link" href="' . $notification->getUrl() . '?mark_notification_as_read=' . $notification->getNotificationId() . '">' . $notification->getMessage() . '</a>
+            </div>
+            ';
+        }
+    }
+    ?>
+
+</div>
