--- a/webapp/view/evidence.html
+++ b/webapp/view/evidence.html
@@ -1,5 +1,3 @@
-<form action="<?php echo $dispute->getUrl(); ?>/evidence" method="post" enctype="multipart/form-data">
-    Select image to upload:
-    <input type="file" name="fileToUpload" id="fileToUpload">
-    <input type="submit" value="Upload Image" name="submit">
-</form>
+<div class="col-lg-12">
+    List of evidence should go here. <a href="<?php echo $dispute->getUrl(); ?>/evidence/new">NEW</a>
+</div>
