little steps towards adding evidence functionality

--- a/webapp/view/dispute_close.html
+++ b/webapp/view/dispute_close.html
@@ -34,10 +34,10 @@
 
     <div class="col-lg-12">
         <p>
-            <input name="verdict" value="resolved" id="resolved" type="radio" /> <label for="resolved">Dispute was resolved successfully</label>
+            <input name="verdict" value="resolved" id="resolved" type="radio" /> <label for="resolved" class="text-success">Dispute was resolved successfully</label>
         </p>
         <p>
-            <input name="verdict" value="failed" id="failed" type="radio" /> <label for="failed">Unable to resolve dispute with Online Dispute Resolution</label>
+            <input name="verdict" value="failed" id="failed" type="radio" /> <label for="failed" class="text-danger">Unable to resolve dispute with Online Dispute Resolution</label>
         </p>
     </div>
 
